(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Artem Gryaznov")

(maintainers "Artem Gryaznov")

(bug_reports "Use GitHub issues to report a bug.")

(homepage "github.com/Kakadu/fp2023")

(package
 (name DGryaznov) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "MiniML")
 (description
  "OCaml interpreter for MiniML language.")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
